@@ -14,7 +14,8 @@ import logging as log
 import json
 
 from openapi_core import create_spec
-from openapi_core.shortcuts import RequestValidator, ResponseValidator
+from openapi_core.validation.request.validators import RequestValidator
+from openapi_core.validation.response.validators import ResponseValidator
 from openapi_core.schema.operations.exceptions import InvalidOperation
 from openapi_core.schema.servers.exceptions import InvalidServer
 from openapi_core.schema.paths.exceptions import InvalidPath
